<resources>
    <string name="app_name">yjboAndroidModule</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_handler_oom">HandlerOomActivity</string>
    <string name="json_1">{
    "address": "北京市平谷区东高村镇东高村兴隆街30号",
    "config_str": "0",
    "name": "赵长永",
    "num": "110226197106031115",
    "request_id": "20160622104102_be5e63e6df5a07fd813",
    "success": true
    }</string>
    <string name="json_2">{"outputs": [{
            "outputLabel": "ocr_id",
            "outputMulti": {},
            "outputValue": {
                "dataType": 50,
                "dataValue": "{\"address\":\"北京市平谷区东高村镇东高村兴隆街30号\",\"config_str\":\"{\\\"side\\\": \\\"face\\\"}\",\"name\":\"赵长永\",\"num\":\"110226197106031115\",\"request_id\":\"20160622104102_be5e63e6df5a07fd813\",\"success\":true}\n"}}]}</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="build">Build</string>
    <string name="grade">Grade</string>
    <string name="help">Help</string>
</resources>