<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_account_balance_black_48dp"
            android:title="@string/home"/>


        <item
            android:id="@+id/group1"
            android:title="group1">
            <menu>
                <item
                    android:id="@+id/drawer_favourite"
                    android:icon="@drawable/ic_favorite_black_48dp"
                    android:title="@string/favourite"/>

                <item
                    android:id="@+id/drawer_downloaded"
                    android:icon="@drawable/ic_build_black_48dp"
                    android:title="@string/build"/>
            </menu>
        </item>

        <item
            android:id="@+id/group2"
            android:title="group2">
            <menu>
                <item
                    android:id="@+id/drawer_more"
                    android:icon="@drawable/ic_grade_black_48dp"
                    android:title="@string/grade"/>

                <item
                    android:id="@+id/drawer_settings"
                    android:icon="@drawable/ic_help_black_48dp"
                    android:title="@string/help"/>
            </menu>
        </item>

    </group>
</menu>